--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ regex = "1.8.2"
 swc_common = "0.31.11"
 swc_ecma_ast = "0.104.4"
 swc_ecma_parser = "0.134.10"
+swc_ecma_visit = "0.90.4"
 thiserror = "1.0.40"
 
 [dev-dependencies]
