--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.71"
+clap = { version = "4.3.0", features = ["derive"] }
 lazy_static = "1.4.0"
 regex = "1.8.2"
 swc_common = "0.31.11"
@@ -12,6 +13,7 @@ swc_ecma_ast = "0.104.4"
 swc_ecma_parser = "0.134.10"
 swc_ecma_visit = "0.90.4"
 thiserror = "1.0.40"
+walkdir = "2.3.3"
 
 [dev-dependencies]
 include-bytes-plus = "1.0.3"
