--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "routes-scraper"
+authors = ["Carlos Castillo", "Carlos Arcia", "Juan Matus"]
 version = "0.1.0"
 edition = "2021"
+description = "Search for usages of an API URL within a fullstack project"
 
 [dependencies]
 anyhow = "1.0.71"
