--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,14 +9,12 @@ description = "Search for usages of an API URL within a fullstack project"
 anyhow = "1.0.71"
 clap = { version = "4.3.0", features = ["derive"] }
 lazy_static = "1.4.0"
-owo-colors = "3.5.0"
 regex = "1.8.2"
-serde = { version = "1.0.163", features = ["derive"] }
 swc_common = "0.31.11"
 swc_ecma_ast = "0.104.4"
 swc_ecma_parser = "0.134.10"
 swc_ecma_visit = "0.90.4"
-tabled = { version = "0.12.0", features = ["color"] }
+tabled = "0.12.0"
 thiserror = "1.0.40"
 walkdir = "2.3.3"
 
