--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,16 +9,16 @@ description = "Search for usages of an API URL within a fullstack project"
 [dependencies]
 anyhow = "1.0.71"
 clap = { version = "4.3.0", features = ["derive"] }
+csv = "1.2.2"
 lazy_static = "1.4.0"
 regex = "1.8.2"
 serde = { version = "1.0.163", features = ["derive"] }
+serde_json = "1.0.96"
 swc_common = "0.31.11"
 swc_ecma_ast = "0.104.4"
 swc_ecma_parser = "0.134.10"
 swc_ecma_visit = "0.90.4"
-tabled = "0.12.0"
 thiserror = "1.0.40"
-url = "2.3.1"
 walkdir = "2.3.3"
 
 [dev-dependencies]
